UGC-19384: fix gap between elements on Expanded Tile

--- a/widgets/styles/templates/expanded-tiles/_index.scss
+++ b/widgets/styles/templates/expanded-tiles/_index.scss
@@ -351,7 +351,7 @@ expanded-tiles:not(:empty) {
           width: 100%;
 
           .content-inner-wrapper {
-            gap: 8px;
+            gap: 0;
             display: flex;
             flex-direction: column;
             height: 100%;
