--- a/widgets/styles/templates/products.scss
+++ b/widgets/styles/templates/products.scss
@@ -35,8 +35,6 @@
 
     display: flex;
     flex-direction: column;
-    border-top: 1px solid #F4F4F4;
-    padding-top: 16px;
   }
 
   .stacklapopup-products-header {
